Implement WebAuthn (#967)
* implement webauthn

* code review

---------
